Fixed the overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,7 @@ body {
   width: 100vw;
   min-height: 100vh;
   height: max-content;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
